Fix share on mobile

--- a/pages/product/products.module.scss
+++ b/pages/product/products.module.scss
@@ -224,14 +224,15 @@
       display: inline-flex;
       justify-content: center;
       align-items: center;
-    @media (max-width: 650px) {
-          height: 1.1rem;
-          width: 1.1rem;
-         
-img{
-          height: 1.1rem;
-            width: 1.1rem;
-}
+
+      @media (max-width: 650px) {
+        height: 1.3rem;
+        width: 1.3rem;
+
+        img {
+          height: 1.3rem;
+          width: 1.3rem;
+        }
       }
     }
 
